--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -241,16 +241,21 @@ a {
     padding-top: 10px;
 }
 
-.download-section {
+.accommodation-section {
     width: 100%;
     padding: 50px 0;
     color: white;
-    background: url(../img/palmisano.jpg) no-repeat center center scroll;
+    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../img/ctariver.jpg) no-repeat center center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    ul {
+        list-style: none;
+        font-size: 18px;
+        line-height: 1.6;
+    }
 }
 
 .map {
@@ -264,7 +269,7 @@ a {
         padding-top: 25px;
     }
 
-    .download-section {
+    .accommodation-section {
         padding: 100px 0;
     }
 
